--- a/index.html
+++ b/index.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main class="main-ctn">
+    <div>
+      <section class="ctn-1">
+        <div class="card-icon">
+          <img src="images/icon-sedans.svg" alt="Icon of Sedan">
+        </div> <!-- Ctn: Col 01 -->
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+        <div>
+          <h2 class="card-title">Sedans</h2>
+          <p class="card-info">Choose a sedan for its affordability and excellent fuel economy. 
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+        </div> <!-- Ctn: Col 02 -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <div class="btn-ctn">
+          <button class="btn">Learn More</button>
+        </div> <!-- Ctn: Col 03 -->
+  
+      </section> <!-- Main: Col 1 -->
+  
+      <section class="ctn-2">
+        <div class="card-icon">
+          <img src="images/icon-suvs.svg" alt="Icon of SUV">
+        </div>
+  
+        <div>
+          <h2 class="card-title">SUVs</h2>
+          <p class="card-info">Take an SUV for its spacious interior, power, and versatility. 
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+        </div>
+  
+        <div class="btn-ctn">
+          <button class="btn">Learn More</button>
+        </div>
+      </section> <!-- Main: Col 2 -->
+  
+      <section class="ctn-3">
+        <div class="card-icon">
+          <img src="images/icon-luxury.svg" alt="Icon of Luxury">
+        </div>
+  
+        <div>
+          <h2 class="card-title">Luxury</h2>
+          <p class="card-info">Cruise in the best car brands without the bloated prices. 
+            Enjoy the enhanced comfort of a luxury rental and arrive in style.
+          </p>
+        </div>
+  
+        <div class="btn-ctn">
+          <button class="btn">Learn More</button>
+        </div>
+      </section> <!-- Main: Col 3 -->
+    </div>
+  </main>
 </body>
-</html>
+
+</html> 
