Semi-Finished Style + Structure (Mobile Only)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="media.css"> -->
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 
 <body>
   <main class="main-ctn">
     <div>
-      <section class="ctn-1">
+      <section class="card-1-container">
         <div class="card-icon">
           <img src="images/icon-sedans.svg" alt="Icon of Sedan">
         </div> <!-- Ctn: Col 01 -->
@@ -25,12 +26,12 @@
         </div> <!-- Ctn: Col 02 -->
   
         <div class="btn-ctn">
-          <button class="btn">Learn More</button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
         </div> <!-- Ctn: Col 03 -->
   
       </section> <!-- Main: Col 1 -->
   
-      <section class="ctn-2">
+      <section class="card-2-container">
         <div class="card-icon">
           <img src="images/icon-suvs.svg" alt="Icon of SUV">
         </div>
@@ -43,11 +44,11 @@
         </div>
   
         <div class="btn-ctn">
-          <button class="btn">Learn More</button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
         </div>
       </section> <!-- Main: Col 2 -->
   
-      <section class="ctn-3">
+      <section class="card-3-container">
         <div class="card-icon">
           <img src="images/icon-luxury.svg" alt="Icon of Luxury">
         </div>
@@ -60,7 +61,7 @@
         </div>
   
         <div class="btn-ctn">
-          <button class="btn">Learn More</button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
         </div>
       </section> <!-- Main: Col 3 -->
     </div>
