--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Started 2/5/23 - Finished 2/6/23 ~ Mark -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <!-- <link rel="stylesheet" href="media.css"> -->
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <link rel="stylesheet" href="media.css">
+  <title>Frontend Mentor | 3-Column Preview Card Component</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
           <img src="images/icon-sedans.svg" alt="Icon of Sedan">
         </div> <!-- Ctn: Col 01 -->
   
-        <div>
+        <div class="card-main-info">
           <h2 class="card-title">Sedans</h2>
           <p class="card-info">Choose a sedan for its affordability and excellent fuel economy. 
             Ideal for cruising in the city or on your next road trip.
@@ -36,7 +36,7 @@
           <img src="images/icon-suvs.svg" alt="Icon of SUV">
         </div>
   
-        <div>
+        <div class="card-main-info">
           <h2 class="card-title">SUVs</h2>
           <p class="card-info">Take an SUV for its spacious interior, power, and versatility. 
             Perfect for your next family vacation and off-road adventures.
@@ -53,7 +53,7 @@
           <img src="images/icon-luxury.svg" alt="Icon of Luxury">
         </div>
   
-        <div>
+        <div class="card-main-info">
           <h2 class="card-title">Luxury</h2>
           <p class="card-info">Cruise in the best car brands without the bloated prices. 
             Enjoy the enhanced comfort of a luxury rental and arrive in style.
@@ -68,4 +68,4 @@
   </main>
 </body>
 
-</html> 
+</html>  
