Fix: Quick Adjustment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <!-- Started 2/5/23 - Finished 2/6/23 ~ Mark -->
 <head>
   <meta charset="UTF-8">
@@ -26,7 +27,7 @@
         </div> <!-- Ctn: Col 02 -->
   
         <div class="btn-ctn">
-          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noreferrer noopener">Learn More</a></button>
         </div> <!-- Ctn: Col 03 -->
   
       </section> <!-- Main: Col 1 -->
@@ -44,7 +45,7 @@
         </div>
   
         <div class="btn-ctn">
-          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noreferrer noopener">Learn More</a></button>
         </div>
       </section> <!-- Main: Col 2 -->
   
@@ -61,7 +62,7 @@
         </div>
   
         <div class="btn-ctn">
-          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noferrer noopener">Learn More</a></button>
+          <button class="btn"><a href="https://github.com/Iron-Mark" target="_blank" rel="noreferrer noopener">Learn More</a></button>
         </div>
       </section> <!-- Main: Col 3 -->
     </div>
